# algospeak-1.0

./: .gitattributes  .gitignore  README.md  notes.txt
backend/: .gitignore  Modelfile  classifier.py  main.py  normalizer.py  pyproject.toml  setup.sh  simple_test.py  test.txt  tune.md
backend/finetunning/: data_prep.ipynb  qlora.py  qlora_unsloth.ipynb
backend/quantized_model/: unsloth.Q4_K_M.gguf
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: carousel-demo.tsx  globe-demo.tsx  macbook-demo.tsx  macbook-scroll-demo.tsx  main-navbar.tsx
frontend/components/sections/: demo-section.tsx  home-section.tsx  presentation-section.tsx
frontend/components/ui/: carousel.tsx  globe.tsx  macbook-scroll.tsx  moderation-demo.tsx  navbar.tsx
