[project]
name = "algospeak-moderation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
]
